# pretty-plotting

./: LICENSE  README.md  pyproject.toml  setup.py
prettyplotting/: colors.py  config.py  figsize.py  rwth_colors.json
